# Saji

./: package.json  pnpm-lock.yaml
backend/app/Models/: Contribution.php  Group.php  GroupMember.php  Payout.php  Transaction.php  User.php
backend/config/: cors.php  services.php
backend/database/migrations/: 0001_01_01_000000_create_users_table.php  2026_07_19_100350_create_groups_table.php  2026_07_19_100351_create_group_members_table.php  2026_07_19_100352_create_contributions_table.php  2026_07_19_100353_create_payouts_table.php  2026_07_19_100354_create_transactions_table.php
backend/routes/: api.php
contract/: Cargo.toml
contract/contracts/savings/: Cargo.toml
contract/contracts/savings/src/: lib.rs  test.rs
contract/contracts/savings/test_snapshots/test/: double_contribute_same_cycle_reverts.1.json  full_cycle_pays_recipient_with_fee.1.json  full_rotation_pays_each_member_once_then_completes.1.json  non_member_cannot_contribute.1.json  payout_reverts_when_not_all_contributed.1.json  start_cycle_requires_two_members.1.json  two_groups_pools_never_cross.1.json  zero_fee_gives_whole_pool_to_recipient.1.json
src/app/: globals.css  layout.tsx
src/app/(landing)/: page.tsx
src/app/auth/: layout.tsx  loading.tsx
src/components/auth/: PicSlide.tsx
src/components/landing/: About.tsx  Cta.tsx  Faq.tsx  Footer.tsx  Header.tsx  Hero.tsx  Reviews.tsx
src/components/shared/: Logo.tsx  PageLoading.tsx
src/components/ui/: button.tsx  form.tsx  input.tsx
src/config/: routes.ts
src/features/auth/: GoogleAuthBtn.tsx  RegisterForm.tsx
(+16 files in other folders)
