[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "=22.0.11"

# Dev/test builds: no debug info. Host tests don't need it, and on Windows the
# MSVC linker's PDB generation both bloats target/ and can fail (LNK1318) on a
# constrained disk. debug = 0 avoids writing .pdb files entirely.
[profile.dev]
debug = 0

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
